--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 spring.devtools.livereload.enabled=true
 spring.devtools.freemaker.enabled=true
+spring.devtools.restart.enabled=false
 
 # DB setting(MySQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,7 +17,7 @@ spring.datasource.password=passwd
 
 
 # JPA Setting
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
@@ -35,3 +36,7 @@ deptInfo.sync.dateTime = 0 0 3 ? * *
 logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
 logging.level.org.springframework.transaction=trace
+
+# Spring Security
+spring.security.user.name = user
+spring.security.user.password = 1111
