--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,15 @@ spring.devtools.livereload.enabled=true
 spring.devtools.freemaker.enabled=true
 spring.devtools.restart.enabled=false
 
+# Spring Security
+spring.security.user.name = user
+spring.security.user.password = 1111
+
 # DB setting(MySQL)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/corpcard?useUnicode=true&serverTimezone=Asia/Seoul&useSSL=false&allowPublicKeyRetrieval=true&rewriteBatchedStatements=TRUE&profileSQL=true&logger=Slf4JLogger&maxQuerySizeToLog=999999
 spring.datasource.username=root
 spring.datasource.password=passwd
-
 
 # JPA Setting
 spring.jpa.generate-ddl=false
@@ -27,16 +30,10 @@ spring.jpa.properties.hibernate.order_inserts = true
 spring.jpa.properties.hibernate.order_updates = true
 
 # Sync Info
-userInfo.filePath=C:/Users/dj930/syncData/user
-deptInfo.filePath=C:/Users/dj930/syncData/dept
+userInfo.filePath=C:/Users/dj930/corpcard/syncData/user
+deptInfo.filePath=C:/Users/dj930/corpcard/syncData/dept
 userInfo.sync.dateTime = 0 0 2 ? * *
 deptInfo.sync.dateTime = 0 0 3 ? * *
 
-# Transaction
-logging.level.org.springframework.jdbc.core.JdbcTemplate=debug
-logging.level.org.springframework.jdbc.core.StatementCreatorUtils=trace
-logging.level.org.springframework.transaction=trace
-
-# Spring Security
-spring.security.user.name = user
-spring.security.user.password = 1111
+# upload Info
+upload.filePath=C:/Users/dj930/corpcard/upload
