첨부파일 다운로드 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
-logging.level.org.hibernate=info
+logging.level.org.hibernate=error
 spring.jpa.properties.hibernate.jdbc.batch_size = 1000
 spring.jpa.properties.hibernate.order_inserts = true
 spring.jpa.properties.hibernate.order_updates = true
