--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8080
 server.servlet.context-path =/
 
-# Sping settings
+# Spring settings
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 spring.devtools.livereload.enabled=true
@@ -20,9 +20,12 @@ spring.datasource.username=root
 spring.datasource.password=passwd
 
 # JPA Setting
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 logging.level.org.hibernate=error
 spring.jpa.properties.hibernate.jdbc.batch_size = 1000
