--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,10 +20,10 @@ spring.datasource.username=root
 spring.datasource.password=passwd
 
 # JPA Setting
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
-#logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+logging.level.org.hibernate.type.descriptor.sql=trace
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
