--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ local.properties
 .loadpath
 .recommenders
 
+# Icon folder
+src/main/resources/static/icons/
+
 # External tool builders
 .externalToolBuilders/
 
