--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
 		<artifactId>log4jdbc-log4j2-jdbc4.1</artifactId>
 		<version>1.16</version>
 		</dependency>
+		<!-- Model Mapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
